--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JavaScript Exercício</title>
+    <title>Calculadora de IMC Mil Grau</title>
     <script src="index.js"></script>
   </head>
   <body>
