--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     <h1>Calculadora de IMC</h1>
       <div class="input">
         <label for="altura">Altura (cm): </label>
-        <input id="altura" type="number" min="100" max="250"><br>
+        <input id="altura" type="number" min="100" max="250" placeholder="Insira sua altura aqui!"><br>
       </div>
       <div class="input">  
         <label for="peso">Peso (kg): </label>
-        <input id="peso" type="number" min="0" max="250"><br>
+        <input id="peso" type="number" min="0" max="250" placeholder="Insira seu peso aqui!"><br>
       </div>
-      <button onclick="calcularIMC()">Calcular o IMC</button>
+      <button id="botao" onclick="calcularIMC()">Calcular o IMC</button>
     <div class="resultado" id="resultadoIMC"></div>
-        <img src="Unilago_2015_1_51_51_0.png" width="100%">
   </div>
     <footer>
       <small id="footer-text">© 2023 Francisco Medeiros Santos Neto.</small>
