A wheel do mouse agora tem função nos inputs!

--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
       <!-- Conteúdo da "Calculadora Diversa" -->
       <div class="calculadora-diversa">
         <h1>Calculadora diversa</h1>
+          <div class="input-diversa">
+            <label for="numero1">Quanto é: </label>
+            <input id="numero1" type="number" placeholder="Insira seu número">
+            <label for="numero2"> e: </label>
+            <input id="numero2" type="number" placeholder="Insira seu número">
+          </div>
       </div>
       <script src="aba1.js"></script>
     </div>
+    <!-- Conteúdo da "Calculadora Diversa" -->
     <div class="aba-conteudo" id="aba2">
       <!-- Conteúdo do "Qual a Capital?"" -->
       <div class="qual-capital">
@@ -46,11 +53,11 @@
       <!-- Conteúdo da "Calculadora de IMC" -->
       <div class="calculadora-imc">
         <h1>Calculadora de IMC</h1>
-        <div class="input">
+        <div class="input-imc">
           <label for="altura">Altura (cm): </label>
           <input id="altura" type="number" min="100" max="250" placeholder="Insira sua altura aqui!"><br>
         </div>
-        <div class="input">  
+        <div class="input-imc">  
           <label for="peso">Peso (kg): </label>
           <input id="peso" type="number" min="0" max="250" placeholder="Insira seu peso aqui!"><br>
         </div>
