--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="input-diversa">
             <label for="numero1">Quanto é: </label>
             <input id="numero1" type="number" placeholder="Insira seu número">
-            <label for="numero2"> e: </label>
+            <label for="numero2"> com </label>
             <input id="numero2" type="number" placeholder="Insira seu número">
           </div>
       </div>
