Aos poucos dá certo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="input-diversa">
           <label for="numero1">Quanto é: </label>
           <input id="numero1" type="number" placeholder="Insira">
-          <label for="numero2"> com </label>
+          <label for="numero2"> com/por </label>
           <input id="numero2" type="number" placeholder="Insira">
         </div>
         <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
