--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
     <title>Calculadora de IMC MilGrau</title>
@@ -49,6 +49,41 @@
       <!-- Conteúdo do "Qual a Capital?"" -->
       <div class="qual-capital">
         <h1>Qual a capital?</h1>
+        <div class="input-capital">
+          <label for="estado">Selecione um Estado</label>
+            <select id="estados">
+              <option value="Selecione">Selecione um Estado</option>
+              <option value=" Acre">Acre (AC)</option>
+              <option value=" Alagoas">Alagoas (AL)</option>
+              <option value="Amapá">Amapá (AP)</option>
+              <option value="Amazonas">Amazonas (AM)</option>
+              <option value="Bahia">Bahia (BA)</option>
+              <option value="Ceará">Ceará (CE)</option>
+              <option value="Distrito Federal">Distrito Federal (DF)</option>
+              <option value="Espírito Santo">Espírito Santo (ES)</option>
+              <option value="Goiás">Goiás (GO)</option>
+              <option value="Maranhão">Maranhão (MA)</option>
+              <option value="Mato Grosso">Mato Grosso (MT)</option>
+              <option value="Mato Grosso do Sul">Mato Grosso do Sul (MS)</option>
+              <option value="Minas Gerais">Minas Gerais (MG)</option>
+              <option value="Pará">Pará (PA)</option>
+              <option value="Paraíba">Paraíba (PB)</option>
+              <option value="Paraná">Paraná (PR)</option>
+              <option value="Pernambuco">Pernambuco (PE)</option>
+              <option value="Piauí">Piauí (PI)</option>
+              <option value="Rio de Janeiro">Rio de Janeiro (RJ)</option>
+              <option value="Rio Grande do Norte">Rio Grande do Norte (RN)</option>
+              <option value="Rio Grande do Sul">Rio Grande do Sul (RS)</option>
+              <option value="Rondônia">Rondônia (RO)</option>
+              <option value="Roraima">Roraima (RR)</option>
+              <option value="Santa Catarina">Santa Catarina (SC)</option>
+              <option value="São Paulo">São Paulo (SP)</option>
+              <option value="Sergipe">Sergipe (SE)</option>
+              <option value="Tocantins">Tocantins (TO)</option>
+            </select>
+          </div>
+          <button id="botao-capital" onclick="mostrarCapital()">A capital é?</button>
+          <div class="resultado" id="resultadoCAP"></div>
       </div>
       <script src="aba2.js"></script>
     </div>
@@ -66,12 +101,29 @@
         </div>
         <button id="botao-imc" onclick="calcularIMC()">Calcular o IMC</button>
         <div class="resultado" id="resultadoIMC"></div>
-        <script src="aba3.js"></script>
       </div>
+      <script src="aba3.js"></script>
+    </div>
+    <div class="aba-conteudo" id="aba4">
+    <!-- Conteúdo da Calculadora de Área -->
+    <div class="area-quadrado">
+      <h1>Área do ²</h1>
+      <div class="input-quad">
+        <label for="altura-quad">Altura (cm): </label>
+        <input type="altura-quad" type="number" min="0" placeholder="Insira a altura do quadrado ou retângulo!"><br>
+      </div>
+      <div class="input-quad">
+        <label for="largura-quad">Largura (cm): </label>
+        <input type="largura-quad" type="number" min="0" placeholder="Insira a largura do quadrado ou retângulo!"><br>
+      </div>
+      <button id="botao-quad" onclick="calcularQUAD()">Ver área</button>
+      <div class="resultado" id="resultadoQUAD"></div>
+    </div>
+    <script src="aba4.js"></script>
     </div>
     <!-- Botão home -->
     <div class="botao-homepage">
-      <button onclick="irParaHomepage()">Voltar para a Homepage</button>
+      <input type="image" id="homepage" alt="Homepage" src="homepage-button.png" onclick="irParaHomepage()"></input>
     </div>
     <!-- Footer -->
     <footer>
