--- a/index.html
+++ b/index.html
@@ -16,118 +16,156 @@
         <button class="aba-botao" onclick="openTab('aba1')">Calculadora Diversa</button>
         <button class="aba-botao" onclick="openTab('aba2')">Qual a Capital?</button>
         <button class="aba-botao" onclick="openTab('aba3')">Calculadora de IMC</button>
-        <button class="aba-botao" onclick="openTab('aba4')">Área²</button>
-        <button class="aba-botao" onclick="openTab('aba5')">Área³</button>
+        <button class="aba-botao" onclick="openTab('aba4')">Área do Quadrado</button>
+        <button class="aba-botao" onclick="openTab('aba5')">Área do Triângulo</button>
         <button class="aba-botao" onclick="openTab('aba6')">E o meu desconto?</button>
       </div>
     </nav>
   </head>
   <body>
     <div class="homepage" id="homepage">
-      <!-- Conteúdo da "Homepage" -->
-      <h1>Seja bem-vindo!</h1>
-      <p>Tudo que estava sendo pedido naquele PDF você pode encontrar aqui :D</p>
-    </div>
-    <div class="aba-conteudo" id="aba1">
-    <!-- Conteúdo da "Calculadora Diversa" -->
-    <div class="calculadora-diversa">
-      <h1>Calculadora diversa</h1>
-        <div class="input-diversa">
-          <label for="numero1">Quanto é: </label>
-          <input id="numero1" type="number" placeholder="Insira">
-          <label for="numero2"> com/por </label>
-          <input id="numero2" type="number" placeholder="Insira">
-        </div>
-        <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
-        <div class="resultado" id="resultadoDIV"></div>
-    </div>
-    <script src="aba1.js"></script>
+<!-- Conteúdo da "Homepage" -->
+<h1>Seja bem-vindo!</h1>
+<p>Tudo que estava sendo pedido naquele PDF você pode encontrar aqui :D</p>
+</div>
+<!-- Conteúdo da "Calculadora Diversa" -->
+  <div class="aba-conteudo" id="aba1">
+  <div class="calculadora-diversa">
+    <h1>Calculadora diversa</h1>
+      <div class="input-diversa">
+        <label for="numero1">Quanto é: </label>
+        <input id="numero1" type="number" placeholder="Insira">
+        <label for="numero2"> com/por </label>
+        <input id="numero2" type="number" placeholder="Insira">
+      </div>
+      <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
+      <div class="resultado" id="resultadoDIV"></div>
   </div>
-    <!-- Conteúdo do "ResultadoDIV" -->
-  <!-- Conteúdo da "Calculadora Diversa" -->
-    <div class="aba-conteudo" id="aba2">
-      <!-- Conteúdo do "Qual a Capital?"" -->
-      <div class="qual-capital">
-        <h1>Qual a capital?</h1>
-        <div class="input-capital">
-          <label for="estado">Selecione um Estado</label>
-            <select id="estados">
-              <option value="Selecione">Selecione um Estado</option>
-              <option value=" Acre">Acre (AC)</option>
-              <option value=" Alagoas">Alagoas (AL)</option>
-              <option value="Amapá">Amapá (AP)</option>
-              <option value="Amazonas">Amazonas (AM)</option>
-              <option value="Bahia">Bahia (BA)</option>
-              <option value="Ceará">Ceará (CE)</option>
-              <option value="Distrito Federal">Distrito Federal (DF)</option>
-              <option value="Espírito Santo">Espírito Santo (ES)</option>
-              <option value="Goiás">Goiás (GO)</option>
-              <option value="Maranhão">Maranhão (MA)</option>
-              <option value="Mato Grosso">Mato Grosso (MT)</option>
-              <option value="Mato Grosso do Sul">Mato Grosso do Sul (MS)</option>
-              <option value="Minas Gerais">Minas Gerais (MG)</option>
-              <option value="Pará">Pará (PA)</option>
-              <option value="Paraíba">Paraíba (PB)</option>
-              <option value="Paraná">Paraná (PR)</option>
-              <option value="Pernambuco">Pernambuco (PE)</option>
-              <option value="Piauí">Piauí (PI)</option>
-              <option value="Rio de Janeiro">Rio de Janeiro (RJ)</option>
-              <option value="Rio Grande do Norte">Rio Grande do Norte (RN)</option>
-              <option value="Rio Grande do Sul">Rio Grande do Sul (RS)</option>
-              <option value="Rondônia">Rondônia (RO)</option>
-              <option value="Roraima">Roraima (RR)</option>
-              <option value="Santa Catarina">Santa Catarina (SC)</option>
-              <option value="São Paulo">São Paulo (SP)</option>
-              <option value="Sergipe">Sergipe (SE)</option>
-              <option value="Tocantins">Tocantins (TO)</option>
-            </select>
-          </div>
-          <button id="botao-capital" onclick="mostrarCapital()">A capital é?</button>
-          <div class="resultado" id="resultadoCAP"></div>
+  <script src="aba1.js"></script>
+  </div>
+<!-- Conteúdo da "Calculadora Diversa" -->
+<!-- Conteúdo do "Qual a Capital?"" -->
+  <div class="aba-conteudo" id="aba2">
+  <div class="qual-capital">
+  <h1>Qual a capital?</h1>
+    <div class="input-capital">
+      <label for="estado">Selecione um Estado</label>
+        <select id="estados">
+          <option value="Selecione">Selecione um Estado</option>
+          <option value=" Acre">Acre (AC)</option>
+          <option value=" Alagoas">Alagoas (AL)</option>
+          <option value="Amapá">Amapá (AP)</option>
+          <option value="Amazonas">Amazonas (AM)</option>
+          <option value="Bahia">Bahia (BA)</option>
+          <option value="Ceará">Ceará (CE)</option>
+          <option value="Distrito Federal">Distrito Federal (DF)</option>
+          <option value="Espírito Santo">Espírito Santo (ES)</option>
+          <option value="Goiás">Goiás (GO)</option>
+          <option value="Maranhão">Maranhão (MA)</option>
+          <option value="Mato Grosso">Mato Grosso (MT)</option>
+          <option value="Mato Grosso do Sul">Mato Grosso do Sul (MS)</option>
+          <option value="Minas Gerais">Minas Gerais (MG)</option>
+          <option value="Pará">Pará (PA)</option>
+          <option value="Paraíba">Paraíba (PB)</option>
+          <option value="Paraná">Paraná (PR)</option>
+          <option value="Pernambuco">Pernambuco (PE)</option>
+          <option value="Piauí">Piauí (PI)</option>
+          <option value="Rio de Janeiro">Rio de Janeiro (RJ)</option>
+          <option value="Rio Grande do Norte">Rio Grande do Norte (RN)</option>
+          <option value="Rio Grande do Sul">Rio Grande do Sul (RS)</option>
+          <option value="Rondônia">Rondônia (RO)</option>
+          <option value="Roraima">Roraima (RR)</option>
+          <option value="Santa Catarina">Santa Catarina (SC)</option>
+          <option value="São Paulo">São Paulo (SP)</option>
+          <option value="Sergipe">Sergipe (SE)</option>
+          <option value="Tocantins">Tocantins (TO)</option>
+        </select>
       </div>
-      <script src="aba2.js"></script>
+      <button id="botao-capital" onclick="mostrarCapital()">A capital é?</button>
+      <div class="resultado" id="resultadoCAP"></div>
     </div>
-    <div class="aba-conteudo" id="aba3">
-      <!-- Conteúdo da "Calculadora de IMC" -->
-      <div class="calculadora-imc">
-        <h1>Calculadora de IMC</h1>
-        <div class="input-imc">
-          <label for="altura">Altura (cm): </label>
-          <input id="altura" type="number" min="100" max="250" placeholder="Insira sua altura aqui!"><br>
-        </div>
-        <div class="input-imc">  
-          <label for="peso">Peso (kg): </label>
-          <input id="peso" type="number" min="0" max="250" placeholder="Insira seu peso aqui!"><br>
-        </div>
-        <button id="botao-imc" onclick="calcularIMC()">Calcular o IMC</button>
-        <div class="resultado" id="resultadoIMC"></div>
+    <script src="aba2.js"></script>
+  </div>
+<!-- Conteúdo do "Qual a Capital?"" -->
+<!-- Conteúdo da "Calculadora de IMC" -->
+  <div class="aba-conteudo" id="aba3">
+  <div class="calculadora-imc">
+    <h1>Calculadora de IMC</h1>
+    <div class="input-imc">
+      <label for="altura">Altura (cm): </label>
+      <input id="altura" type="number" min="100" max="250" placeholder="Insira sua altura aqui!"><br>
+    </div>
+    <div class="input-imc">  
+      <label for="peso">Peso (kg): </label>
+      <input id="peso" type="number" min="0" max="250" placeholder="Insira seu peso aqui!"><br>
+    </div>
+    <button id="botao-imc" onclick="calcularIMC()">Calcular o IMC</button>
+    <div class="resultado" id="resultadoIMC"></div>
+  </div>
+  <script src="aba3.js"></script>
+  </div>
+<!-- Conteúdo da "Calculadora de IMC" -->
+<!-- Conteúdo da Calculadora de Área² -->
+  <div class="aba-conteudo" id="aba4">
+  <div class="area-quadrado">
+    <h1>Área do ²</h1>
+    <div class="input-quad">
+      <label for="comprimento">Comprimento (cm): </label>
+      <input id="comprimento" type="number" min="0" placeholder="Insira o comprimento do quadrado ou retângulo!"><br>
+    </div>
+    <div class="input-quad">
+      <label for="largura">Largura (cm): </label>
+      <input id="largura" type="number" min="0" placeholder="Insira a largura do quadrado ou retângulo!"><br>
+    </div>
+    <button id="botao-quad" onclick="calcularArea()">Ver área</button>
+    <div class="resultado" id="resultadoArea"></div>
+  </div>
+  <script src="aba4.js"></script>
+  </div>
+<!-- Conteúdo da Calculadora Área² -->
+<!-- Conteúdo da Calculadora Área do Triângulo -->
+  <div class="aba-conteudo" id="aba5">
+  <div class="area-triangulo">
+    <h1>Área do Triângulo</h1>
+    <div class="input-tri">
+      <label for="base">Base (cm): </label>
+        <input id="base" type="number" min="0" placeholder="Insira a base aqui!"><br>
       </div>
-      <script src="aba3.js"></script>
-    </div>
-    <div class="aba-conteudo" id="aba4">
-    <!-- Conteúdo da Calculadora de Área -->
-    <div class="area-quadrado">
-      <h1>Área do ²</h1>
-      <div class="input-quad">
-        <label for="altura-quad">Altura (cm): </label>
-        <input type="altura-quad" type="number" min="0" placeholder="Insira a altura do quadrado ou retângulo!"><br>
+      <div class="input-tri">
+        <label for="largura-tri">Largura (cm): </label>
+        <input id="largura-tri" type="number" min="0" placeholder="Insira a largura aqui!"><br>
       </div>
-      <div class="input-quad">
-        <label for="largura-quad">Largura (cm): </label>
-        <input type="largura-quad" type="number" min="0" placeholder="Insira a largura do quadrado ou retângulo!"><br>
-      </div>
-      <button id="botao-quad" onclick="calcularQUAD()">Ver área</button>
-      <div class="resultado" id="resultadoQUAD"></div>
+      <button id="botao-tri" onclick="calcularTri()">Ver Área</button>
+      <div class="resultado" id="resultadoTri"></div>
+  </div>
+  <script src="aba5.js"></script>
+  </div>
+<!-- Conteúdo da Calculadora Área do Triângulo -->
+<!-- Conteúdo do E o meu desconto? -->
+  <div class="aba-conteudo" id="aba6">
+  <div class="desconto">
+    <h1>E o meu desconto?</h1>
+    <div class="input-desconto">
+      <label for="valor">Valor do produto: </label>
+      <input id="valor" type="number" placeholder="Valor do produto!"><br>
     </div>
-    <script src="aba4.js"></script>
+    <div class="input-desconto">
+      <label for="desconto">Desconto (%): </label>
+      <input id="desconto" type="number" min="0" max="100" placeholder="Valor do desconto!"><br>
     </div>
-    <!-- Botão home -->
-    <div class="botao-homepage">
-      <input type="image" id="homepage" alt="Homepage" src="homepage-button.png" onclick="irParaHomepage()"></input>
-    </div>
-    <!-- Footer -->
-    <footer>
-      <small id="footer-text">© 2023 Francisco Medeiros Santos Neto.</small>
-    </footer>
-  </body>
+    <button id="botao-desconto" onclick="desconto()">De quanto foi o meu desconto?</button>
+    <div class="resultado" id="resultadoDesconto"></div>
+  </div>
+  <script src="aba6.js"></script>
+  </div>
+<!-- Conteúdo do E o meu desconto? -->
+<!-- Botão home -->
+  <div class="botao-homepage">
+  <input type="image" id="homepage" alt="Homepage" src="homepage-button.png" onclick="irParaHomepage()"></input>
+  </div>
+  <!-- Footer -->
+  <footer>
+    <small id="footer-text">© 2023 Francisco Medeiros Santos Neto.</small>
+  </footer>
+</body>
 </html>
