--- a/index.html
+++ b/index.html
@@ -29,18 +29,41 @@
 <p>Tudo que estava sendo pedido naquele PDF você pode encontrar aqui :D</p>
 </div>
 <!-- Conteúdo da "Calculadora Diversa" -->
-  <div class="aba-conteudo" id="aba1">
+<div class="aba-conteudo" id="aba1">
   <div class="calculadora-diversa">
     <h1>Calculadora diversa</h1>
-      <div class="input-diversa">
-        <label for="numero1">Quanto é: </label>
-        <input id="numero1" type="number" placeholder="Insira">
-        <label for="numero2"> com/por </label>
-        <input id="numero2" type="number" placeholder="Insira">
+    <div class="input-diversa">
+      <label for="numero1">Quanto é: </label>
+      <input id="numero1" type="number" placeholder="Insira">
+      <label for="numero2"> com/por </label>
+      <input id="numero2" type="number" placeholder="Insira">
+    </div>
+    <div class="operacao">
+      <div class="operacao12">
+        <label>
+          <input type="checkbox" id="boxSoma"> Soma
+        </label>
+        <label>
+          <input type="checkbox" id="boxSub"> Subtração
+        </label>
       </div>
-      <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
-      <div class="resultado" id="resultadoDIV"></div>
-  </div>
+      <div class="operacao34">
+        <label>
+          <input type="checkbox" id="boxMult"> Multiplicação
+        </label>
+        <label>
+          <input type="checkbox" id="boxDiv"> Divisão
+        </label>
+      </div>
+      <div class="operacao5">
+        <label>
+          <input type="checkbox" id="boxMedia"> Media
+        </label>
+      </div>
+    </div>
+    <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
+    <div class="resultado" id="resultadoDIV"></div>
+    </div>
   <script src="aba1.js"></script>
   </div>
 <!-- Conteúdo da "Calculadora Diversa" -->
