--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <!-- Conteúdo da "Calculadora Diversa" -->
 <div class="aba-conteudo" id="aba1">
   <div class="calculadora-diversa">
-    <h1>Calculadora diversa</h1>
+    <div class="titulos">
+      <h1>Calculadora diversa</h1>
+    </div>
     <div class="input-diversa">
       <label for="numero1">Quanto é: </label>
       <input id="numero1" type="number" placeholder="Insira">
@@ -63,14 +65,16 @@
     </div>
     <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
     <div class="resultado" id="resultadoDIV"></div>
-    </div>
-  <script src="aba1.js"></script>
   </div>
+  <script src="aba1.js"></script>
+</div>
 <!-- Conteúdo da "Calculadora Diversa" -->
 <!-- Conteúdo do "Qual a Capital?"" -->
-  <div class="aba-conteudo" id="aba2">
+<div class="aba-conteudo" id="aba2">
   <div class="qual-capital">
-  <h1>Qual a capital?</h1>
+    <div class="titulos">
+      <h1>Qual a capital?</h1>
+    </div>
     <div class="input-capital">
       <label for="estado">Selecione um Estado</label>
         <select id="estados">
@@ -109,11 +113,13 @@
     </div>
     <script src="aba2.js"></script>
   </div>
-<!-- Conteúdo do "Qual a Capital?"" -->
-<!-- Conteúdo da "Calculadora de IMC" -->
+  <!-- Conteúdo do "Qual a Capital?"" -->
+  <!-- Conteúdo da "Calculadora de IMC" -->
   <div class="aba-conteudo" id="aba3">
-  <div class="calculadora-imc">
-    <h1>Calculadora de IMC</h1>
+    <div class="calculadora-imc">
+    <div class="titulos">
+      <h1>Calculadora de IMC</h1>
+    </div>
     <div class="input-imc">
       <label for="altura">Altura (cm): </label>
       <input id="altura" type="number" min="100" max="250" placeholder="Insira sua altura aqui!"><br>
@@ -131,7 +137,9 @@
 <!-- Conteúdo da Calculadora de Área² -->
   <div class="aba-conteudo" id="aba4">
   <div class="area-quadrado">
-    <h1>Área do ²</h1>
+    <div class="titulos">
+      <h1>Área do ²</h1>
+    </div>
     <div class="input-quad">
       <label for="comprimento">Comprimento (cm): </label>
       <input id="comprimento" type="number" min="0" placeholder="Insira o comprimento do quadrado ou retângulo!"><br>
@@ -149,7 +157,9 @@
 <!-- Conteúdo da Calculadora Área do Triângulo -->
   <div class="aba-conteudo" id="aba5">
   <div class="area-triangulo">
-    <h1>Área do Triângulo</h1>
+    <div class="titulos">
+      <h1>Área do Triângulo</h1>
+    </div>
     <div class="input-tri">
       <label for="base">Base (cm): </label>
         <input id="base" type="number" min="0" placeholder="Insira a base aqui!"><br>
@@ -166,8 +176,10 @@
 <!-- Conteúdo da Calculadora Área do Triângulo -->
 <!-- Conteúdo do E o meu desconto? -->
   <div class="aba-conteudo" id="aba6">
-  <div class="desconto">
-    <h1>E o meu desconto?</h1>
+    <div class="desconto">
+      <div class="titulos">
+        <h1>E o meu desconto?</h1>
+      </div>
     <div class="input-desconto">
       <label for="valor">Valor do produto: </label>
       <input id="valor" type="number" placeholder="Valor do produto!"><br>
