--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </label>
       </div>
     </div>
-    <button id="botao-div" onclick="calcularDIV()">Ver resultados</button>
+    <button id="botao-div" class="botao-resultado" onclick="calcularDIV()">Ver resultados</button>
     <div class="resultado" id="resultadoDIV"></div>
   </div>
   <script src="aba1.js"></script>
@@ -108,7 +108,7 @@
           <option value="Tocantins">Tocantins (TO)</option>
         </select>
       </div>
-      <button id="botao-capital" onclick="mostrarCapital()">A capital é?</button>
+      <button id="botao-capital" class="botao-resultado" onclick="mostrarCapital()">A capital é?</button>
       <div class="resultado" id="resultadoCAP"></div>
     </div>
     <script src="aba2.js"></script>
@@ -128,7 +128,7 @@
       <label for="peso">Peso (kg): </label>
       <input id="peso" type="number" min="0" max="250" placeholder="Insira seu peso aqui!"><br>
     </div>
-    <button id="botao-imc" onclick="calcularIMC()">Calcular o IMC</button>
+    <button id="botao-imc" class="botao-resultado" onclick="calcularIMC()">Calcular o IMC</button>
     <div class="resultado" id="resultadoIMC"></div>
   </div>
   <script src="aba3.js"></script>
@@ -148,7 +148,7 @@
       <label for="largura">Largura (cm): </label>
       <input id="largura" type="number" min="0" placeholder="Insira a largura do quadrado ou retângulo!"><br>
     </div>
-    <button id="botao-quad" onclick="calcularArea()">Ver área</button>
+    <button id="botao-quad" class="botao-resultado" onclick="calcularArea()">Ver área</button>
     <div class="resultado" id="resultadoArea"></div>
   </div>
   <script src="aba4.js"></script>
@@ -168,7 +168,7 @@
         <label for="largura-tri">Largura (cm): </label>
         <input id="largura-tri" type="number" min="0" placeholder="Insira a largura aqui!"><br>
       </div>
-      <button id="botao-tri" onclick="calcularTri()">Ver Área</button>
+      <button id="botao-tri" class="botao-resultado" onclick="calcularTri()">Ver Área</button>
       <div class="resultado" id="resultadoTri"></div>
   </div>
   <script src="aba5.js"></script>
@@ -188,7 +188,7 @@
       <label for="desconto">Desconto (%): </label>
       <input id="desconto" type="number" min="0" max="100" placeholder="Valor do desconto!"><br>
     </div>
-    <button id="botao-desconto" onclick="desconto()">De quanto foi o meu desconto?</button>
+    <button id="botao-desconto" class="botao-resultado" onclick="desconto()">De quanto foi o meu desconto?</button>
     <div class="resultado" id="resultadoDesconto"></div>
   </div>
   <script src="aba6.js"></script>
